# cardgame-scryer

./: Cargo.toml  LICENSE  README.md
src/: ai.rs  ai_actor.rs  ai_player.rs  assoc.rs  dummy_player.rs  game_logic.rs  human_player.rs  lib.rs  logic.pl  main.rs  move_messages.rs  player_actor.rs  prolog_types.rs  random.rs  scryer_actor.rs  scryer_types.rs  scryer_util.rs
