[package]
name = "cardgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"

[dependencies.scryer-prolog]
default-features = false
git = "https://github.com/bakaq/scryer-prolog"
branch = "rework_library_interface"

[dev-dependencies]
dashu = "0.4.2"
