[package]
name = "cardgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"
rand = "0.8.5"

[dependencies.scryer-prolog]
default-features = false
git = "https://github.com/mthom/scryer-prolog"
branch = "master"

[dev-dependencies]
dashu = "0.4.2"

[lints.clippy]
wildcard_enum_match_arm = "warn"
